[tool.poetry]
name = "pd_qgrid"
version = "0.2.0"
description = ""
authors = ["Iyed Ghedamsi <iyed.ghdemsi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.3"
qgrid = "^1.1.1"
jupyterlab = "^1.2.4"
pandas-flavor = "^0.2.0"
ipywidgets = "7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
